--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <header>
         <nav>
             <input type="search" class="search" placeholder="Пошук...">
+            <div class="weather">
+                <button class="openweather">Погода</button>
+            </div>
             <ul class="lang">
                 <li>
                     <button>UK</button>
@@ -95,6 +98,8 @@
              <a href="https://goo.gl/maps/siSmttHhkdsrPRqAA"><img src="img/map.jpg" alt="карта"></a>
          </div>
     </footer>
+    
+    <script src="js/index.js"></script>
 </body>
 
 </html>
